--- a/증권사연동.md
+++ b/증권사연동.md
@@ -20,6 +20,6 @@
 - 파일 -> open api 접속 
 - error : OpenAPI OCX를 탑재한 프로그램을 종료하신 후 확인버튼을 눌러주시기 바랍니다<br/>
 확인 버튼 누르지말고, 프로그램 닫기 누름 그다음 확인버튼 누르면 해결
-- 계좌비밀번호 저장
+- 계좌비밀번호 저장 <br/>
 ![증권사연동2](img/증권사연동2.png)
 <br/> 우측클릭 계좌비밀번호 저장
